<resources>
    <string name="app_name">tfg</string>

    <!-- === MENU ITEMS === -->
    <string name="title_posts">Posts</string>
    <string name="title_account">Account</string>
    <string name="title_search">Search</string>
    <string name="title_anuncios">Anuncios</string>

    <!-- === STRINGS SIGNIN === -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_recuperar_contrasena">Recuperar contraseña</string>
    <string name="boton_iniciar_sesion">Iniciar Sesion</string>
    <string name="boton_ir_registro">Ir al Registro</string>

    <!-- === STRINGS SIGNUP === -->
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellidos</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="boton_registro">Registrarme</string>
    <string name="boton_ir_login">Ir al Inicio de Sesion</string>
    <string name="hint_password_info">La contraseña debe contener al menos una letra mayúscula, una letra minúscula, un número, un carácter especial y tener una longitud mínima de 12 caracteres.</string>

    <!-- === STRINGS NEWPOST === -->
    <string name="hint_titulo_post">Titulo del anuncio…</string>
    <string name="hint_descripcion_post">Descripcion de la actividad…</string>
    <string name="hint_localizacion_post">Localización de la actividad…</string>
    <string name="hint_fecha_hora">Selecciona una fecha y hora…</string>
    <string name="hint_foto_post">Añade una imagen…</string>
    <string name="hint_numero_post">Número de personas…</string>
    <string name="text_checkbox_post">Material necesario</string>

    <!-- === STRINGS ACCOUNT -->
    <string name="btn_logout">Cerrar sesion</string>
    <string name="btn_edit">Editar Perfil</string>
    <string name="btn_eliminar">Eliminar mi perfil</string>
    <string name="btn_mis_actividades">Mis Actividades</string>
    <string name="text_email">email</string>
    <string name="text_nombre">nombre</string>
    <string name="text_apellidos">apellidos</string>
    <string name="text_telefono">telefono</string>

    <!-- === STRINGS EDITPROFILE === -->
    <string name="hint_nombre_edit_profile">Nombre…</string>
    <string name="hint_apellidos_edit_profile">Apellidos…</string>
    <string name="hint_telefono_edit_profile">Telefono…</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_aceptar">Aceptar</string>

    <!-- === ITEM POST === -->
    <string name="item_post_author_email">authoremail@gmail.com</string>
    <string name="item_post_title">Titulo del post</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>

    <!-- === STRINGS SEARCH === -->
    <string name="hint_buscador">Buscar…</string>
    <string name="buscador_personas">Personas</string>
    <string name="buscador_posts">Posts</string>
    <string name="buscador_anuncios">Anuncios</string>

    <!-- === STRINGS POST DETAIL === -->
    <string name="post_detail_titulo">Titulo</string>
    <string name="post_detail_autor">Autor</string>
    <string name="post_detail_fecha">Fecha</string>
    <string name="post_detail_localizacion">Localizacion</string>
    <string name="post_detail_numero_personas">Numero Personas</string>
    <string name="post_detail_material">Material Necesario</string>
    <string name="btn_apuntar_actividad">Apuntarme</string>
    <string name="btn_descargar_pdf">Descargar PDF</string>
    <string name="btn_editar_post">Editar anuncio</string>
    <string name="btn_eliminar_post">Eliminar anuncio</string>
    <string name="post_detail_personas">Personas apuntadas</string>

    <!-- === STRINGS FORGOT PASSWORD === -->
    <string name="text_info_correo">Introduzca su correo electronico y le enviaremos un mensaje para restablecer su contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="correo_enviado">Le hemos enviado un correo para restablecer su contraseña</string>
    <string name="text_info_password">Le recomendamos que siga usando un formato de contraseña segura para evitar problemas de seguridad</string>
    <string name="volver_signin">Volver al inicio de sesion</string>
    <string name="volver_signup">Voler al registro</string>

    <!-- === STRINGS EDITAR POST === -->
    <string name="cambiar_imagen">Cambiar Imagen…</string>

    <!-- === STRINGS USER PROFILE === -->
    <string name="btn_contactar">Contactar</string>

    <!-- === STRINGS NEW ANUNCIO === -->
    <string name="text_titulo_anuncio">Titulo del anuncio…</string>
    <string name="text_descripcion_anuncio">Descripcion del anuncio…</string>

    <!-- === STRINGS ANUNCIO DETAIL === -->
    <string name="btn_editar_anuncio">Editar Anuncio</string>
    <string name="btn_eliminar_anuncio">Eliminar Anuncio</string>
    
    <!-- === STRINGS MIS ACTIVIDADES === -->
    <string name="titulo_mis_actividades">Mis Actividades</string>
    <string name="titulo_ninguna_actividad">Aun no estas apuntado a ninguna actividad</string>
</resources>