<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detailTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_detail_titulo"
        android:layout_marginStart="5dp"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_detail_autor"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTitulo"/>

    <TextView
        android:id="@+id/detailDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textSize="16sp"
        android:text="@string/lorem"
        app:layout_constraintTop_toBottomOf="@+id/detailAutor"
        app:layout_constraintStart_toStartOf="@+id/detailTitulo" />
    
    <Button
        android:id="@+id/btnContactar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/btn_contactar"
        app:layout_constraintTop_toBottomOf="@+id/detailDescripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <Button
        android:id="@+id/btnEditarAnuncio"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/btn_editar_anuncio"
        app:layout_constraintTop_toBottomOf="@+id/detailDescripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <Button
        android:id="@+id/btnEliminarAnuncio"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btn_eliminar_anuncio"
        app:layout_constraintTop_toBottomOf="@+id/btnEditarAnuncio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
</androidx.constraintlayout.widget.ConstraintLayout>
    