<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detailTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_detail_titulo"
            android:layout_marginStart="5dp"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <TextView
            android:id="@+id/detailAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_detail_autor"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailTitulo"/>

        <TextView
            android:id="@+id/detailDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="16sp"
            android:text="@string/lorem"
            app:layout_constraintTop_toBottomOf="@+id/detailAutor"
            app:layout_constraintStart_toStartOf="@+id/detailTitulo" />

        <TextView
            android:id="@+id/detailFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textSize="16sp"
            android:text="@string/post_detail_fecha"
            app:layout_constraintTop_toBottomOf="@+id/detailDescripcion"
            app:layout_constraintStart_toStartOf="@+id/detailDescripcion" />
        
        <TextView
            android:id="@+id/detailLocalizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:text="@string/post_detail_localizacion"
            app:layout_constraintTop_toBottomOf="@+id/detailFecha"
            app:layout_constraintStart_toStartOf="@+id/detailFecha" />
        
        <TextView
            android:id="@+id/detailNumeroPersonas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:text="@string/post_detail_numero_personas" 
            app:layout_constraintTop_toBottomOf="@+id/detailLocalizacion"
            app:layout_constraintStart_toStartOf="@+id/detailLocalizacion" />
        
        <TextView
            android:id="@+id/detailMaterialNecesario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:text="@string/post_detail_material" 
            app:layout_constraintTop_toBottomOf="@+id/detailNumeroPersonas" 
            app:layout_constraintStart_toStartOf="@+id/detailNumeroPersonas" />
            
        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="160dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@+id/detailDescripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@tools:sample/avatars" />
        
        <Button
            android:id="@+id/btnApuntarActividad"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/btn_apuntar_actividad"
            app:layout_constraintTop_toBottomOf="@+id/detailImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        
        <Button
            android:id="@+id/btnEditarPost"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/btn_editar_post"
            app:layout_constraintTop_toBottomOf="@+id/detailImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        
        <Button
            android:id="@+id/btnBorrarPost"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/btn_eliminar_post"
            app:layout_constraintTop_toBottomOf="@+id/btnEditarPost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</ScrollView>