<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="100dp">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/icon_person_profile"
            android:scaleType="centerCrop"
            android:background="@drawable/circular_background"
            android:foreground="@drawable/circular_mask" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textSize="20sp"
        android:text="@string/text_email"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/text_nombre"
        app:layout_constraintTop_toBottomOf="@+id/textEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/text_apellidos"
        app:layout_constraintTop_toBottomOf="@+id/textNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <TextView
        android:id="@+id/textTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/text_telefono"
        app:layout_constraintTop_toBottomOf="@+id/textApellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/azul_boton"
        android:text="@string/btn_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    
    <Button
        android:id="@+id/btnMisActividades"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/verde_boton"
        android:text="@string/btn_mis_actividades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/morado_boton"
        android:text="@string/btn_logout"
        app:layout_constraintTop_toBottomOf="@id/btnEditProfile"
        app:layout_constraintStart_toStartOf="@+id/btnEditProfile" />
    
    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/rojo_boton"
        android:text="@string/btn_eliminar"
        app:layout_constraintTop_toBottomOf="@+id/btnMisActividades"
        app:layout_constraintEnd_toEndOf="@+id/btnMisActividades"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>