<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/hint_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/hint_password"
        app:layout_constraintTop_toBottomOf="@+id/fieldEmail"
        app:layout_constraintStart_toStartOf="@+id/fieldEmail"/>

    <Button
        android:id="@+id/btnInicioSesion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/boton_iniciar_sesion"
        app:layout_constraintTop_toBottomOf="@+id/fieldPassword"
        app:layout_constraintStart_toStartOf="@+id/fieldPassword"
        />

    <Button
        android:id="@+id/btnIrRegistro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/boton_ir_registro"
        app:layout_constraintTop_toBottomOf="@+id/btnInicioSesion"
        app:layout_constraintStart_toStartOf="@+id/btnInicioSesion"
        />


</androidx.constraintlayout.widget.ConstraintLayout>