<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_titulo_post"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_descripcion_post"
        android:maxLength="60"
        app:layout_constraintEnd_toEndOf="@+id/editTitulo"
        app:layout_constraintStart_toStartOf="@id/editTitulo"
        app:layout_constraintTop_toBottomOf="@id/editTitulo" />

    <EditText
        android:id="@+id/editLocalizacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_localizacion_post"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="@+id/editDescripcion"
        app:layout_constraintStart_toStartOf="@id/editDescripcion"
        app:layout_constraintTop_toBottomOf="@id/editDescripcion" />

    <EditText
        android:id="@+id/editFechaHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/hint_fecha_hora"
        app:layout_constraintEnd_toEndOf="@+id/editLocalizacion"
        app:layout_constraintStart_toStartOf="@+id/editLocalizacion"
        app:layout_constraintTop_toBottomOf="@+id/editLocalizacion"/>

    <EditText
        android:id="@+id/editNumeroPersonas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_numero_post"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editFechaHora"
        app:layout_constraintStart_toStartOf="@+id/editFechaHora"
        app:layout_constraintTop_toBottomOf="@+id/editFechaHora" />

    <EditText
        android:id="@+id/editImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/cambiar_imagen"
        app:layout_constraintEnd_toEndOf="@+id/editNumeroPersonas"
        app:layout_constraintStart_toStartOf="@+id/editNumeroPersonas"
        app:layout_constraintTop_toBottomOf="@+id/editNumeroPersonas" />

    <CheckBox
        android:id="@+id/editMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_checkbox_post"
        app:layout_constraintStart_toStartOf="@+id/editImagen"
        app:layout_constraintTop_toBottomOf="@+id/editImagen" />

    <ImageView
        android:id="@+id/fotoPrevia"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/editImagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnConfirmEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/icon_complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>