<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:id="@+id/textInfoCorreo"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="16sp"
        android:text="@string/text_info_correo"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <EditText
        android:id="@+id/inputCorreoRecuperar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInfoCorreo" />
    
    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/confirmar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCorreoRecuperar" />
    
    <Button
        android:id="@+id/volverSignIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/volver_signin"
        app:layout_constraintStart_toStartOf="@+id/btnConfirmar"
        app:layout_constraintTop_toBottomOf="@+id/btnConfirmar" />
    
    <Button
        android:id="@+id/volverSignUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/volver_signup"
        app:layout_constraintStart_toStartOf="@+id/volverSignIn"
        app:layout_constraintTop_toBottomOf="@+id/volverSignIn" />
    
</androidx.constraintlayout.widget.ConstraintLayout>